# openapi-axum-generator

./: .clippy.toml  .gitignore  Cargo.toml  CurrentIssue.md  Tasks.md  openapi.json
src/: axum_server.rs  file_utils.rs  filters.rs  functions_translator.rs  lib.rs  main.rs  openapi_translator.rs  reporter.rs  routes_translator.rs  routes_translator_petstore_test.rs  routes_translator_test.rs  routes_translator_uspto_test.rs  schema_generator.rs  schemas_translator.rs  test_utils.rs
src/routes/: keywords.rs  mod.rs  models.rs  translator.rs
src/test_data/: openapi.json  petstore.json
src/tests/: functions_translator_test.rs
templates/: Cargo.toml.j2  axum.rs.jinja  axum_server.rs.jinja  axum_utoipa.rs.jinja  base.rs.jinja  database.rs.j2  docs.rs.jinja  error.rs.j2  errors.rs.jinja  handlers.rs.jinja  main.rs.j2  middleware.rs.j2  mod.rs.jinja  models.rs.jinja  routes.rs.jinja  test_file.rs.jinja  testing.rs.jinja
templates/j2/: endpoints.j2  models.j2
